// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all apis registerFieldMiddleware 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": true,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "dataType": "string",
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": true,
    "initialValue": "123",
    "initialized": true,
    "inputed": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "key": "aa",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visibleCacheValue": undefined,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerFormField 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": true,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "dataType": "string",
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": true,
    "initialValue": "123",
    "initialized": true,
    "inputed": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "key": "aa",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visibleCacheValue": undefined,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerVirtualBox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": true,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "cc": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
    "mounted": true,
    "name": "cc",
    "path": "cc",
    "props": Object {
      "key": "cc",
      "type": "object",
      "x-component": "box",
    },
    "unmounted": false,
    "visible": true,
  },
  "cc.aa": Object {
    "active": false,
    "dataType": "string",
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": true,
    "initialValue": "123",
    "initialized": true,
    "inputed": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "cc.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "key": "aa",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visibleCacheValue": undefined,
    "visited": false,
    "warnings": Array [],
  },
}
`;
